Took out the empty columns on the portfolio page, fixed the disaster that was happening on mobile on the About Me

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ html {
 #aboutMe {
   border-color: whitesmoke;
   width: fit-content;
-  height: 400px;
+  /* height: 400px; */
   border: 5px solid whitesmoke;
   padding: 10px;
   background-image: url(./Assets/slate.jpg);
@@ -74,7 +74,7 @@ html {
   font-family: Georgia, serif;
 }
 
-#projectCards {
+.projectCards {
   background-image: url(./Assets/grain.jpg);
 }
 
